edlynx specific changes

--- a/lms/templates/static_templates/contact.html
+++ b/lms/templates/static_templates/contact.html
@@ -5,5 +5,18 @@
 
 <section class="container about">
 <h1>${_("Contact")}</h1>
-<p>${_("This page left intentionally blank. It is not used by edx.org but is left here for possible use by installations of Open edX.")}</p>
+<p style="font-size:22px">${_("Email:")}<br> admin@edlynx.org </p>
+<p style="font-size:22px">${_("Phone:")}<br>
+   USA: +1 (848) 229-2696
+   <br>
+   India: +91 9415424947</p>
+<p style="font-size:22px">${_("Address:")}<br>
+31 Eldeco Greenwoods<br>
+Lucknow - 226001, UP, India
+<br>
+<br>
+626 Middlesex Ave<br>
+Metuchen, NJ 08840<br>
+USA</p>
 </section>
+
