--- a/lms/templates/static_templates/faq.html
+++ b/lms/templates/static_templates/faq.html
@@ -5,5 +5,12 @@
 
 <section class="container about">
 <h1>${_("FAQ")}</h1>
-<p>${_("This page left intentionally blank. It is not used by edx.org but is left here for possible use by installations of Open edX.")}</p>
+<p style="font-size:22px">${_("Q: Is any payment required to register with edLynX?")}<br>
+A: No. Registration is free. You can access a large amount of relevant material on edLynX without any payment.</p>
+<p style="font-size:22px">${_("Q: What courses are available on edLynX?")}<br>
+A: Currently, you can register for JEE Boot Camps which build your fundamental cognitive, mental, and physical health skills that you need before you take a plunge into JEE preparation.</p>
+<p style="font-size:22px">${_("Q: What new courses are going to be available on edLynX?")}<br>
+A: We are working on rolling out full JEE preparation courses for JEE 2016 and JEE 2017 which will provide a comprehensive coverage of JEE preparation. These courses will provide self contained video tutorials, assignments, homework, and tests for PCM. In addition to this the courses will also cover the critical aspects of learning and memory techniques, mental and physical fitness, and English for science exams.</p>
+<p style="font-size:22px">${_("Q: I have another question that is not covered here?")}<br>
+A: You can ask your question by emailing us at admin@edlynx.org.</p>
 </section>
