--- a/lms/templates/static_templates/team.html
+++ b/lms/templates/static_templates/team.html
@@ -61,6 +61,22 @@ Professor Agarwal is a leading faculty and researcher in the area of nano-techno
 <br>
 
 <li>
+<div><img alt="Dr. BD Chowdhury" src="${static.url('images/edx-theme/bdchowdhury-faculty.jpg')}"></div>
+<div class="desc">
+<p>
+<b>Dr. BD Chowdhury, PhD<br>
+Post-Doctoral Research TIFR India, University of Amsterdam and Arizona State University<br>
+PhD Ohio State University<br>
+MSc IIT Kanpur<br><br>
+</b>
+Dr. Borun D. Chowdhury is a theoretical physicist at CERN Switzerland. Dr. Chowdhury has several years of scientific research experience in string theory and quantum gravity at some of the leading global research institutions such as University of Amsterdam, Netherland, Arizona State University, USA, and Tata Institute of Fundamental Research, India. Dr. Chowdhury went to IIT Kanpur for his undergraduate studies and has a PhD in Physics from Ohio State University, USA. Dr. Chowdhury is also interested in statistics and machine learning.
+</p>
+</div>
+</li>
+<br>
+<br>
+
+<li>
 <div><img alt="Professor Delmar Larsen" src="${static.url('images/edx-theme/delmarlarsen-faculty.jpg')}"></div>
 <div class="desc">
 <p>
@@ -70,7 +86,7 @@ BS University of Washington<br><br>
 </b>
 Professor Larsen’s research focuses on light activated biological functions. The questions his group is working to answer require a multi-disciplinary approach that incorporates tools from molecular biology, physical chemistry, and computational sciences.
 <br>
-Dr. Larsen is founder of ChemWiki <a href="http://chemwiki.ucdavis.edu">http://chemwiki.ucdavis.edu</a> a hyperlibrary that is revolutionizing the way student’s access and learn from textbooks.  
+Dr. Larsen is founder of ChemWiki <a href="http://chemwiki.ucdavis.edu">http://chemwiki.ucdavis.edu</a> a hyperlibrary that is revolutionizing the way student’s access and learn from textbooks.
 <br><a href="http://larsenlab.ucdavis.edu">http://larsenlab.ucdavis.edu</a>
 </p>
 </div>
