--- a/lms/static/sass/shared/_footer.scss
+++ b/lms/static/sass/shared/_footer.scss
@@ -56,9 +56,10 @@
         li {
           @include float(left);
           margin-right: ($baseline*0.75);
+          line-height: 1.5em;
 
           a {
-            color: tint($black, 20%);
+            color: $link-color;
 
             &:hover, &:focus, &:active {
               color: $link-color;
