--- a/lms/static/sass/multicourse/_course_about.scss
+++ b/lms/static/sass/multicourse/_course_about.scss
@@ -4,7 +4,7 @@
   }
 
   header.course-profile {
-    background: $course-profile-bg;
+    background: $header-course-profile-bg;
     background-image: $homepage-bg-image;
     background-size: cover;
     box-shadow: 0 1px 80px 0 rgba(0,0,0, 0.5);
