Removed video download link from website

--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -42,7 +42,8 @@
   <ul class="wrapper-downloads">
     % if download_video_link:
         <li class="video-sources video-download-button">
-            <a href="${download_video_link}">${_('Download video')}</a>
+<!-- commented to remove download video link from website -->
+<!--            <a href="${download_video_link}">${_('Download video')}</a> -->
         </li>
     % endif
     % if track:
