Added New and Blog section

--- a/lms/templates/static_templates/blog.html
+++ b/lms/templates/static_templates/blog.html
@@ -4,6 +4,77 @@
 <%block name="pagetitle">${_("Blog")}</%block>
 
 <section class="container about">
-    <h1>${_("Blog")}</h1>
-    <p>${_("This page left intentionally blank. It is not used by edx.org but is left here for possible use by installations of Open edX.")}</p>
+<script language="javascript" type="text/javascript">
+   function hideText(seqNumber) {
+   	var showMore = "showMore" + seqNumber, moreText ="moreText" + seqNumber;
+
+    document.getElementById(showMore).style.display = "none";
+    document.getElementById(moreText).style.display = "block";
+}
+</script>
+
+<style>
+	.heading
+	{
+		line-height: 1.45em;
+		border-bottom: 1px solid #ccc;
+		font-size: 2.4375em;
+		letter-spacing: -1px;
+		font-family: alright_sansblack,HelveticaNeue,Helvetica,Arial,sans-serif;
+		color:#2968aa;
+		font-weight: 600;
+	}
+	.content
+	{
+		font-family:Open Sans,Arial,Helvetica,sans-serif;
+		line-height: 1.525;
+	}
+	.italic_content
+	{
+		 font-style: italic;
+		 font-size: 1.1em;
+		 color:#8c1515;
+	}
+</style>
+
+<div class="heading">ONLINE EXAM PREPARATION FROM THE WORLD'S TOP SCIENTISTS, WALL STREETERS, AND LAWYERS</div>
+<br>
+<div class="content">
+<b>Edlynx (<a href="https://www.edlynx.org">www.edlynx.org</a>) </b>provides complete guidance on preparation for high stakes exams such as IIT JEE, CLAT, CSAT, and SSC. Learn from the experts and scientists associated with Harvard University, University of Pennsylvania, University of Berkeley, University of Chicago, IIT, IIM, Penn State University and more. <br>
+<br>
+Edlynx courses are fully sufficient and self contained and do not leave out any aspect. Once you select an edLynX course you get access to everything that you will need for your exam preparation from start to finish. Each course includes video tutorials by ivy league professors and industry leaders, home works, practice problems, tailored feedback, textbook, and forums for discussion on complex topics and problems. Our intelligent platform makes course revision a breeze by tracking your progress and helping you build your weak areas throughout the year rather than leaving everything to the end. <br>
+<br>
+Our study material is developed from the latest research in every area that is often only accessible to the experts in that field. <br>
+<br>
+According to the latest brain research students learn best when they discuss complex ideas. Online forums provide a venue for students to ask any question anytime. They also act as discussion hangouts that are monitored by faculty to guide discussions in right direction.<br>
+<br>
+Edlynx is an intelligent learning platform based on OPENEDX built by leading American Universities MIT, Harvard, and Stanford. Intelligence of this platform tracks your learning and test performance and provides you tailored feedback focussing solely on your learning needs. <br>
+<br>
+On edlynx you can Access your courses anytime, anywhere, and as many times as you need. Play, pause, rewind, and replay a topic until you become an expert.<br>
+<br>
+Turbocharge your exam preparation with learning techniques used by leading scientists, best legal minds, olympians, and wall street financiers.<br>
+<br>
+Edlynx brings to you the latest discoveries in areas of neuroscience and cognitive science. We use teaching systems such as Brain Targeted Teaching developed by Johns Hopkins Medical University, top medical college in the world. This systems build upon the latest findings in brain research related to learning and memory. Our focus is on teaching you content, skills, and processes so you can become a better life long learner. You will not only gain mastery of concepts but you will also be able to apply them into higher-order processes such as analysis, evaluation, and creation which are often required techniques for solving complex problems in competitive exams. <br>
+<br>
+We will help you adapt new learning techniques popularized by a course and book by Professor Barbara Oakley of Oakland University, USA. In words of Dr. Oakley “Using these approaches, no matter what your skill levels in math and science, you can change your thinking and change your life. If you’re already an expert, this peek under the mental hood will give you ideas for turbocharging successful learning, including counterintuitive test-taking tips and insights that will help you make the best use of your time on homework and problem sets. If you’re struggling, you’ll see a structured treasure trove of practical techniques that walk you through what you need to do to get on track. If you’ve ever wanted to become better at anything, this book will help serve as your guide.”<br>
+<br>
+<i>Excerpt from Oakley, Barbara (2014-07-31). A Mind For Numbers: How to Excel at Math and Science (Even If You Flunked Algebra) (pp. xix-xx). Penguin Group US. Kindle Edition. <br></i>
+<br>
+Features:<ul>
+<li>Learn from the world's top scientists and scholars</li>
+<li>Learn anywhere including in the comfort of your home
+<li>Follow lecture videos with closed captions in in Hindi and English</li>
+<li>Stream class videos via Wi-Fi or mobile networks</li>
+<li>Download videos to watch anytime</li>
+<li>Learn to use learning and memory techniques developed by leading American scientists and used by the world's best engineers, scientists, mathematicians, lawyers, and athletes</li>
+</ul>
+<br>
+Courses:<ul>
+<li>JEE and IIT Advanced</li>
+<li>CLAT</li>
+<li>CSAT</li>
+<li>SSC</li>
+<li>English for Test Takers</li>
+<li>How to Learn Science and Math</li>
+</ul>
 </section>
