--- a/lms/templates/static_templates/blog.html
+++ b/lms/templates/static_templates/blog.html
@@ -56,7 +56,7 @@ Turbocharge your exam preparation with learning techniques used by leading scien
 <br>
 Edlynx brings to you the latest discoveries in areas of neuroscience and cognitive science. We use teaching systems such as Brain Targeted Teaching developed by Johns Hopkins Medical University, top medical college in the world. This systems build upon the latest findings in brain research related to learning and memory. Our focus is on teaching you content, skills, and processes so you can become a better life long learner. You will not only gain mastery of concepts but you will also be able to apply them into higher-order processes such as analysis, evaluation, and creation which are often required techniques for solving complex problems in competitive exams. <br>
 <br>
-We will help you adapt new learning techniques popularized by a course and book by Professor Barbara Oakley of Oakland University, USA. In words of Dr. Oakley “Using these approaches, no matter what your skill levels in math and science, you can change your thinking and change your life. If you’re already an expert, this peek under the mental hood will give you ideas for turbocharging successful learning, including counterintuitive test-taking tips and insights that will help you make the best use of your time on homework and problem sets. If you’re struggling, you’ll see a structured treasure trove of practical techniques that walk you through what you need to do to get on track. If you’ve ever wanted to become better at anything, this book will help serve as your guide.”<br>
+We will help you adapt new learning techniques popularized by a course and book by Professor Barbara Oakley of Oakland University, USA. In words of Dr. Oakley "Using these approaches, no matter what your skill levels in math and science, you can change your thinking and change your life. If you’re already an expert, this peek under the mental hood will give you ideas for turbocharging successful learning, including counterintuitive test-taking tips and insights that will help you make the best use of your time on homework and problem sets. If you’re struggling, you’ll see a structured treasure trove of practical techniques that walk you through what you need to do to get on track. If you’ve ever wanted to become better at anything, this book will help serve as your guide."<br>
 <br>
 <i>Excerpt from Oakley, Barbara (2014-07-31). A Mind For Numbers: How to Excel at Math and Science (Even If You Flunked Algebra) (pp. xix-xx). Penguin Group US. Kindle Edition. <br></i>
 <br>
@@ -77,4 +77,5 @@ Courses:<ul>
 <li>English for Test Takers</li>
 <li>How to Learn Science and Math</li>
 </ul>
+</div>
 </section>
