--- a/lms/templates/navigation.html
+++ b/lms/templates/navigation.html
@@ -123,17 +123,12 @@ site_status_msg = get_site_status_msg(course_id)
           </li>
         % endif
       </%block>
-      % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
-          % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
-          <li class="nav-global-04">
-            <a class="cta cta-register" href="${reverse('course-specific-register', args=[course.id.to_deprecated_string()])}">${_("Register Now")}</a>
-          </li>
-          % else:
-          <li class="nav-global-04">
-            <a class="cta cta-register" href="/register${login_query()}">${_("Register Now")}</a>
-          </li>
-          % endif
-      % endif
+      <li class="nav-global-01">
+        <a href="${marketing_link('ABOUT')}">${_("About")}</a>
+      </li>
+      <li class="nav-global-02">
+        <a href="${marketing_link('TEAM')}">${_("Team")}</a>
+      </li>
     </ol>
 
     <ol class="right nav-courseware">
@@ -146,6 +141,17 @@ site_status_msg = get_site_status_msg(course_id)
           % endif
       % endif
     </li>
+      % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
+          % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
+          <li class="nav-global-04">
+            <a class="cta cta-register" href="${reverse('course-specific-register', args=[course.id.to_deprecated_string()])}">${_("Register Now")}</a>
+          </li>
+          % else:
+          <li class="nav-global-04">
+            <a class="cta cta-register" href="/register${login_query()}">${_("Register Now")}</a>
+          </li>
+          % endif
+      % endif
     </ol>
     % endif
   </nav>
