Highlighted features and Courses text in blog page

--- a/lms/templates/static_templates/blog.html
+++ b/lms/templates/static_templates/blog.html
@@ -60,7 +60,7 @@ We will help you adapt new learning techniques popularized by a course and book 
 <br>
 <i>Excerpt from Oakley, Barbara (2014-07-31). A Mind For Numbers: How to Excel at Math and Science (Even If You Flunked Algebra) (pp. xix-xx). Penguin Group US. Kindle Edition. <br></i>
 <br>
-Features:<ul>
+<b>Features:</b><ul>
 <li>Learn from the world's top scientists and scholars</li>
 <li>Learn anywhere including in the comfort of your home
 <li>Follow lecture videos with closed captions in in Hindi and English</li>
@@ -69,7 +69,7 @@ Features:<ul>
 <li>Learn to use learning and memory techniques developed by leading American scientists and used by the world's best engineers, scientists, mathematicians, lawyers, and athletes</li>
 </ul>
 <br>
-Courses:<ul>
+<b>Courses:</b><ul>
 <li>JEE and IIT Advanced</li>
 <li>CLAT</li>
 <li>CSAT</li>
