--- a/lms/templates/navigation.html
+++ b/lms/templates/navigation.html
@@ -124,10 +124,13 @@ site_status_msg = get_site_status_msg(course_id)
         % endif
       </%block>
       <li class="nav-global-01">
-        <a href="${marketing_link('ABOUT')}">${_("About")}</a>
+        <a href="${marketing_link('TEAM')}">${_("Team")}</a>
       </li>
       <li class="nav-global-02">
-        <a href="${marketing_link('TEAM')}">${_("Team")}</a>
+        <a href="${marketing_link('NEWS')}">${_("News")}</a>
+      </li>
+      <li class="nav-global-02">
+	    <a href="${marketing_link('BLOG')}">${_("Blog")}</a>
       </li>
     </ol>
 
